@@ -223,6 +223,8 @@ public class CompactFileStatsMode extends AbstractGobyMode {
         final AlignmentReader reader = new AlignmentReader(basename);
         reader.readHeader();
         stream.println("Info from header:");
+        stream.printf("Alignment produced by aligner=%s version=%s ",reader.getAlignerName(),
+                reader.getAlignerVersion());        
         stream.printf("Sorted: %b%n", reader.isSorted());
         stream.printf("Indexed: %b%n", reader.isIndexed());
         stream.printf("Number of target sequences = %,d%n", reader.getNumberOfTargets());
